<resources>
    <string name="app_name">XY MATHS</string>
    <string name="intro">This book is Key Success in Maths.</string>
    <string name="autor">Author: Pape Ousmane THIAO </string>
    <string name="price">Price: 29 Euros</string>
    <string name="text">57, Bambey,\nHarmattan Senegal.</string>
    <string name="email">Email Id: padiomayee@gmail.com </string>
    <string name="cellphone">Phone No: +221 77 360 32 35 </string>
</resources>
