<?xml version="1.0" encoding="utf-8"?>
<android.widget.LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorAccent"
    android:orientation="vertical"
    tools:context="com.example.elhadji.xymaths.MainActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginBottom="@dimen/size"
        android:layout_marginTop="@dimen/size"
        android:text="@string/intro"
        android:textAllCaps="true"
        android:textColor="@color/title_color"
        android:textSize="@dimen/title_size"
        android:textStyle="bold|italic" />

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:scaleType="fitXY"
        android:src="@drawable/xymaths" />


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/size"
        android:layout_marginTop="@dimen/size"
        android:text="@string/autor"
        android:textColor="@color/text_color"
        android:textSize="@dimen/text_size"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/textEmail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/bet_size"
        android:layout_marginTop="@dimen/size"
        android:text="@string/email"
        android:autoLink="email"
        android:textColor="@color/text_color"
        android:textSize="@dimen/text_size"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/textPhone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/bet_size"
        android:layout_marginTop="@dimen/size"
        android:text="@string/cellphone"
        android:autoLink="phone"
        android:textColor="@color/text_color"
        android:textSize="@dimen/text_size"
        android:textStyle="bold" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/size"
        android:layout_marginStart="@dimen/size"
        android:text="@string/text"
        android:textColor="@color/text_color"
        android:textSize="@dimen/text_size"
        android:textStyle="normal" />

    <TextView
        android:id="@+id/textPrice"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/sizeo"
        android:layout_marginLeft="@dimen/size"
        android:layout_marginStart="@dimen/size"
        android:text="@string/price"
        android:textColor="@color/text_color"
        android:textSize="@dimen/text_size"
        android:textStyle="bold" />

</android.widget.LinearLayout>
